--- a/evaluation/requirements.txt
+++ b/evaluation/requirements.txt
@@ -5,7 +5,6 @@ datasets
 torch
 transformers
 python_dateutil
-flash_attn
 
 # math_eval
 sympy==1.12
@@ -13,3 +12,4 @@ antlr4-python3-runtime==4.11.1 # ! The version needs to be compatible with sympy
 word2number
 Pebble
 timeout-decorator
+latex2sympy2
